# pygaul

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml  test.ipynb  untitled.ipynb  warnings.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
docs/_static/: custom.css
docs/_template/: pypackage-credit.html
pygaul/: __init__.py  utils.py
pygaul/data/: gaul_continent.json  gaul_database.parquet
tests/: conftest.py  test_continent.py  test_get_items.py  test_get_name.py  test_names.py  test_pygaul.py
tests/test_continent/: test_continent.yml
tests/test_get_items/: test_area.yml  test_multiple_input.yml  test_sub_content.yml  test_too_low.yml
tests/test_get_name/: test_area.yml  test_sub_content.yml  test_too_high.csv  test_too_low.yml
tests/test_names/: test_area.csv  test_complete_content.csv  test_empty.csv  test_sub_content.csv  test_too_high.csv  test_too_low.csv
